  comma-separated values with extra spaces (hossman, Munendra S N)

* SOLR-14514: Avoid picking 'stream' method in JSON facet when any of 'allBuckets', 'numBuckets', and 'missing' parameters are enabled
  (hossman, Munendra S N)

* SOLR-12559: Fix placeholder valuesource 'FIELDNAME' not working with de-referenced values in JSON aggregator parsing.
  (hossman, Munendra S N)

Other Changes
---------------------

* SOLR-14954: Heavily edit reindexing.adoc (Sameul García Martínez and Erick Erickson)

* SOLR-14981: Removed search results clustering contrib from 8x (due to Carrot2 incompatibility with Java 1.8).
  (Dawid Weiss)

* SOLR-14995: Update Jetty to 9.4.34 (Mike Drob)

* SOLR-14958: Refactor zkHost config logic to make testing easier and reduce risk of incorrect value being used (hossman)

* SOLR-14951: Upgrade Angular JS 1.7.9 to 1.8.0 (Kevin Risden)

* SOLR-15057: Avoid unnecessary object retention in FacetRangeProcessor. (Christine Poerschke)

* SOLR-14999: New option for specifying the advertised Solr Port (hostPort). Still defaults to "jetty.port". (Houston Putman)

==================  8.7.0 ==================

Consult the lucene/CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------

* SOLR-14151 Make schema components load from packages (noble)

* SOLR-14681: Introduce ability to delete .jar stored in the Package Store. (MarcusSorealheis , Mike Drob)

* SOLR-14604: Add the ability to uninstall a package from with the Package CLI. (MarcusSorealheis)

* SOLR-14582: Expose IWC.setMaxCommitMergeWaitMillis in Solr's index config. This is an expert config option that can be
  set when using a custom MergePolicy (doesn't have any effect on the default MP) (Tomás Fernández Löbbe)

* SOLR-13751: Add BooleanSimilarityFactory class. (Andy Webb via Christine Poerschke)

* SOLR-14875: Make SolrEventListeners load from packages (noble)
