@@ -51,7 +51,7 @@ public class QueryResponse extends SolrResponseBase
   private NamedList<Object> _spellInfo = null;
   private List<NamedList<Object>> _clusterInfo = null;
   private NamedList<Object> _jsonFacetingInfo = null;
-  private Map<String,NamedList<Object>> _suggestInfo = null;
+  private NamedList<NamedList<Object>> _suggestInfo = null;
   private NamedList<Object> _statsInfo = null;
   private NamedList<NamedList<Object>> _termsInfo = null;
   private NamedList<SolrDocumentList> _moreLikeThisInfo = null;
@@ -170,7 +170,7 @@ public class QueryResponse extends SolrResponseBase
         // Don't call extractJsonFacetingInfo(_jsonFacetingInfo) here in an effort to do it lazily
       }
       else if ( "suggest".equals( n ) )  {
-        _suggestInfo = (Map<String,NamedList<Object>>) res.getVal( i );
+        _suggestInfo = (NamedList<NamedList<Object>>) res.getVal( i );
         extractSuggesterInfo(_suggestInfo);
       }
       else if ( "stats".equals( n ) )  {
@@ -203,7 +203,7 @@ public class QueryResponse extends SolrResponseBase
     _jsonFacetingResponse = new NestableJsonFacet(facetInfo);
   }
 
-  private void extractSuggesterInfo(Map<String, NamedList<Object>> suggestInfo) {
+  private void extractSuggesterInfo(NamedList<NamedList<Object>> suggestInfo) {
     _suggestResponse = new SuggesterResponse(suggestInfo);
   }
 
